$Id: ChangeLog,v 1.13 2004/03/03 18:06:27 h_oudejans Exp $

2004-03-06 Maarten ter Huurne <maarten@treewalker.org>
	* Moved build files to a subdir named "build".

2004-03-03 Herman Oudejans <hn.oudejans@quicknet.nl>
	* adapted for openmsx cvs Changelog version 1.1156 (openmsx_info 
	  command output is now a tcl-list).

2004-02-27 Herman Oudejans <hn.oudejans@quicknet.nl>
	* fixed a sync error when querying the settings

2004-02-12 Herman Oudejans <hn.oudejans@quicknet.nl>
	* When RESOURCEDIR is defined, catapult will use this as the 
	  basedirectory for the resources.
	* Suppressed output when launching openMSX in hidden mode
	* When used with openMSX 0.3.4 release, catapult will now filter
	  excessive information from the set command reply if set is used 
	  to query the current value.

2004-02-08 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Make renderers and scalers dynamicly
	* Catapult now asks all needed settings from openMSX

2004-02-07 Maarten ter Huurne <maarten@treewalker.org>
	* Integrated dependency checking from openMSX alternative.mk.
	* Fixed compile warnings that showed up at "-Wall".

2004-02-06 Manuel Bilderbeek <manuel@msxnet.org>
	* added version variable in Makefile (maybe add config.h?)
	* more .cvsignore entries

2004-02-06 Herman Oudejans <hn.oudejans@quicknet.nl>
	* machines and extensions are refreshed after the
	  configuration dialog has been called
	* added program icon
	* removed unicode from xml parser
	* replaced diskimage.bmp
	* moved version number to config.h

2004-02-05 Wouter Vermaelen <wouter.vermaelen@pi.be>
	* handle unknown XML tags better

2004-02-05 Herman Oudejans <hn.oudejans@quicknet.nl>
	* the xml parser now supports the new xml structure.
	* removed the fake xml parser from the windowsversion.
	* fixed the win32 build process (wxg to xrc)

2004-02-04 Manuel Bilderbeek <manuel@msxnet.org>
	* openMSX Catapult: initial CVS version (Oss Release)