@@ -1,7 +1,13 @@
-# $Id: Makefile,v 1.4 2004/02/07 06:47:35 mthuurne Exp $
+# $Id: main.mk,v 1.1 2004/03/06 14:13:52 mthuurne Exp $
 #
 # Makefile for openMSX Catapult
 # =============================
+
+VERSION:=0.0.1CVS
+
+CONFIG_MAKEFILE:=build/config.mk
+
+include $(CONFIG_MAKEFILE)
 
 CXX:=$(shell wx-config --cxx)
 SED:=sed
@@ -17,6 +23,9 @@ OBJECTS_PATH:=$(BUILD_PATH)/obj
 BINDIR:=$(BUILD_PATH)/bin
 PROGRAM:=$(BINDIR)/catapult
 XRCDIR:=$(BUILD_PATH)/resources/dialogs
+
+CONFIG_PATH:=$(BUILD_BASE)/config
+CONFIG_HEADER:=$(CONFIG_PATH)/config.h
 
 SOURCES:= \
 	wxCatapultApp \
@@ -53,6 +62,7 @@ DEPEND_FLAGS:=
 DEPEND_FLAGS+=-MP
 
 CXXFLAGS:=-g -pipe -Wall
+CXXFLAGS+=-I$(dir $(CONFIG_HEADER))
 CXXFLAGS+=$(shell xml2-config --cflags) $(shell wx-config --cxxflags)
 
 
@@ -74,7 +84,9 @@ default: all
 # Build Rules
 # ===========
 
-all: $(PROGRAM) $(DIALOGS) $(BITMAPS)
+# TODO: Relying on CONFIG_HEADER being built before PROGRAM, this might break
+#       parallelized builds.
+all: $(CONFIG_HEADER) $(PROGRAM) $(DIALOGS) $(BITMAPS)
 
 $(PROGRAM): $(OBJECTS_FULL)
 	@echo "Linking $(@:$(BINDIR)/%=%)..."
@@ -91,6 +103,16 @@ $(OBJECTS_FULL): $(OBJECTS_PATH)/%.o: $(SOURCES_PATH)/%.cpp $(DEPEND_PATH)/%.d
 	@$(CXX) $(DEPEND_FLAGS) -MMD -MF $(DEPEND_SUBST) \
 		-o $@ $(CXXFLAGS) -c $<
 	@touch $@ # Force .o file to be newer than .d file.
+
+$(CONFIG_HEADER): $(CONFIG_MAKEFILE)
+	@echo "Creating $@..."
+	@mkdir -p $(@D)
+	@echo "// Automatically generated by build process." > $@
+	@echo "#ifndef __CONFIG_H_INCLUDED" >> $@
+	@echo "#define __CONFIG_H_INCLUDED" >> $@
+	@echo "#define VERSION \"$(VERSION)\"" >> $@
+	@echo "#define RESOURCEDIR \"$(INSTALL_BASE)/resources\"" >> $@
+	@echo "#endif" >> $@
 
 $(DIALOGS): $(XRCDIR)/%.xrc: $(DIALOGSDIR)/%.wxg
 	@echo "Converting $(@:$(XRCDIR)/%=%)..."
