@@ -1,8 +1,0 @@
-#ifndef __CONFIG_H_INCLUDED
-#define __CONFIG_H_INCLUDED
-
-/* Version number of package */
-#define VERSION "0.0.1CVS"
-
-#endif
-
